# stl_repair

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  ruff.toml  ty.toml
src/stl_repair/: __init__.py  __main__.py  logging.py
