[project]
name = "stl_repair"
version = "0.3.0"
description = "Repair STLs using Blender's capabilities"
authors = [
    {name = "Miles Smith", email = "mileschristiansmith@gmail.com"},
]
dependencies = [
    "bpy>=4.1.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "loguru>=0.7.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GPL-3.0"}

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project.scripts]
repair_stls = "stl_repair.__init__:app"

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[tool.uv.sources]
bpy = { index = "blender" }

[[tool.uv.index]]
name = "blender"
url = "https://download.blender.org/pypi/"
explicit = true